--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -3,8 +3,14 @@
   display: inline-block;
   text-align: center;
 }
-#image-button {
+
+#logo {
+  position: relative;
+}
+
+#logo-button {
   position: absolute;
+  opacity: 0;
   top: 50%;
   left: 20%;
   width: 200px;
